# lokeshmohanty.github.io

./: .gitignore  .gitmodules  CNAME  LICENSE  README.md  about.html  about.md  archive.html  circle.yml  contact.html  contact.md  data-science.html  data-science.md  index.html  lokesh1197-github-io.cabal  lokeshmohanty-github-io.cabal  package.yaml  projects.html  projects.md  site.cabal  site.hs
.circleci/: config.yml
.github/workflows/: haskell.yml
posts/: 2021-02-27-programming.html  2021-02-27-programming.md
templates/: default.html
