name:                lokesh1197-github-io
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lokesh1197/lokesh1197.github.io#readme
license:             BSD3
license-file:        LICENSE
author:              Lokesh Mohanty
maintainer:          lokesh1197@gmail.com
copyright:           Copyright (c) 2020 Lokesh Mohanty
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
