name:                site
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lokesh1197/lokesh1197.github.io#readme
license:             BSD3
license-file:        LICENSE
author:              Lokesh Mohanty
maintainer:          lokesh1197@gmail.com
copyright:           2021 Lokesh Mohanty
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:          site.hs
  default-language: Haskell2010
  ghc-options:      -threaded
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
